Enhance weather app HTML with color scheme and styles
Updated the weather app HTML to include a color scheme meta tag and adjusted the background gradient for the weather container.

--- a/static/weather.html
+++ b/static/weather.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light">
+
     <title>Weather App 🌸</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
@@ -55,7 +57,7 @@
         }
 
         .weather-container {
-            background: linear-gradient(145deg, rgba(255, 255, 255, 0.95), rgba(248, 187, 208, 0.9));
+            background: linear-gradient(145deg, rgba(255, 255, 255, 1), rgba(248, 187, 208, 0.9));
             backdrop-filter: blur(20px);
             border-radius: 30px;
             padding: 40px;
@@ -252,3 +254,4 @@
 </body>
 
 </html>
+
