--- a/static/weather.html
+++ b/static/weather.html
@@ -200,7 +200,8 @@
             showLoading();
             try {
                 // Always point to local backend
-                const response = await fetch(`/weather?city=${encodeURIComponent(city)}`);
+                const response = await fetch(`https://YOUR-RENDER-APP-NAME.onrender.com/weather?city=${encodeURIComponent(city)}`);
+
 
                 const data = await response.json();
                 if (data.error) throw new Error(data.error);
@@ -254,4 +255,5 @@
 </body>
 
 </html>
+
 
